# detection_pot

./: .gitignore  CMakeLists.txt  Pot-plante.tfrecord  Pot-plante_label_map.pbtxt  README.md  aruco.py  arucoDetector.cpp  aruco_samples_utility.hpp  calibration.cpp  calibrationCharuco.cpp  camera.py  client.cpp  createCharuco.cpp  createCharucoBoard.cpp  get_the_focal.py  global_aruco.py  image.py  main.cpp  modele.py  photo.cpp  reco.py  test  testc  train.py
aruco/: ArucoDetector.cpp  ArucoDetector.h  ArucoTag.cpp  ArucoTag.h
calibration_images/: calibration_results.yaml
tcp/: MyClient.cpp  MyClient.h
utils/: ArucoDetector.cpp  ArucoDetector.h  ArucoTag.h  utils.cpp  utils.h  vroche.md
